--- a/content/posts/2019-08-05-7.md
+++ b/content/posts/2019-08-05-7.md
@@ -7,8 +7,8 @@ show_in_homepage: true
 show_description: false
 license: ''
 
-tags: ["Leetcode"]
-categories: ["数据结构与算法", "Leetcode"]
+tags: ["数据结构与算法", "Leetcode"]
+categories: [ "Leetcode"]
 
 featured_image: ''
 featured_image_preview: ''
